<resources>
    <string name="app_name">Basics</string>
    <string name="mainActivityString">Main Activity</string>
    <string name="secondaryActivityString">Secondary Activity</string>
    <string name="tertiaryActivityString">Tertiary Activity</string>
    <string name="quaternaryActivityString">Quaternary Activity</string>

    <!-- actions -->
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hold_to_change_color">Hold to change color</string>
    <string name="search">Search</string>


    <!-- different launch mode strings-->
    <string name="lmStandard">Standard</string>
    <string name="lmSingleTop">Single Top</string>
    <string name="lmSingleTask">Single Task</string>
    <string name="lmSingleInstance">Single Instance</string>

    <!-- different intent flags for task management -->
    <string name="flagNewTask">FLAG_ACTIVITY_NEW_TASK</string>
    <string name="flagClearTop">FLAG_ACTIVITY_CLEAR_TOP</string>
    <string name="flagSingleTop">FLAG_ACTIVITY_SINGLE_TOP</string>

    <!-- MainActivity examples-->
    <string name="example1">Activities, Tasks, Fragments</string>
    <string name="example2">Dialogs &amp; Navigation</string>
    <string name="example3">Toolbar</string>
    <string name="example4">Custom Dialogs</string>
    <string name="example5">Broadcasts</string>
    <string name="example6">Runtime Permissions</string>
    <string name="example7">Storage</string>
    <string name="example8">Threads</string>
    <string name="example9"><![CDATA[Themes & Styles]]></string>
    <string name="example10"><![CDATA[Moshi & Retrofit API]]></string>

    <!-- Menu titles and items -->
    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="title_3">Title 3</string>
    <string name="header_title">Header Title</string>
    <string name="header_text">Header Text</string>

    <string name="top_app_bar">Top App Bar</string>

    <!-- ListView items -->
    <string-array name="list_items_array">
        <item>Lebensabschnittpartner</item>
        <item>Unabhängigkeitserklärung</item>
        <item>Freundschaftsbezeugung</item>
        <item>Rechtsschutzversicherungsgesellschaften</item>
        <item>Kaftfahrzeug-Haftpflichtversicherung</item>
    </string-array>
</resources>