<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnExample1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example1" />

        <Button
            android:id="@+id/btnExample2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example2" />

        <Button
            android:id="@+id/btnExample3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example3" />

        <Button
            android:id="@+id/btnExample4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example4" />

        <Button
            android:id="@+id/btnExample5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example5" />

        <Button
            android:id="@+id/btnExample6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example6" />

        <Button
            android:id="@+id/btnExample7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example7" />

        <Button
            android:id="@+id/btnExample8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example8" />

        <Button
            android:id="@+id/btnExample9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example9" />
    </LinearLayout>
</ScrollView>